--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "realmtech-online",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,8 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.4.6",
     "@astrojs/check": "^0.5.6",
-    "typescript": "^5.3.3"
+    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vue": "^4.0.8",
+    "astro": "^4.4.6",
+    "axios": "^1.6.7",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "vue": "^3.4.21"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.24",
+    "daisyui": "^4.7.2"
   }
 }
